Save local changes before syncing

--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
   </div>
 
   <h1 id="heading">Our Politikians</h1>
+  <br>
+  <img id="mainimg" src="https://media.tenor.com/R7JF4cuIjogAAAAj/spongebob-spongebob-meme.gif" alt="Spongebob dancing" width="400">
+
 </body>
 </html>
